--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,61 +1,19 @@
 
-
-
-
-
-nav{
-   
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-    margin:50px 50px 50px;
-    
-    
-}
-.nav-title{
-    font-weight: 800;
-    font-size: 45px;
-
-}
-nav ul li{
-    list-style: none;
-    margin-right: 51px;
-
-}
-.header{
-    
-    background-repeat: no-repeat;
-    
-    
-
-}
-nav li a{
-    text-decoration: none;
-    font-size: 20px;
-
-
-}
-
-.cover{
+.back-cover{
     display: flex;
     justify-content: space-between;
-    margin: 0 35px 0 200px ;
-}
-.banner-control{
-    max-width: 580px;
+    margin: 50px;
+
     
 }
-.banner-greetings{
+.box-size{
    font-size: 45px; 
    font-weight: 600;
 }
 
-.banner-2{
-    font-weight: bold;
-    font-size: 85px;
-}
+
 .images-3{
-    width: 580px;
+    width: 480px;
     
 }
 .section-title{
@@ -77,33 +35,82 @@ nav li a{
     border-radius: 20px;
     padding: 50px;
     margin:80px
+    max-width: 1500;
+    margin:87px;
 }
 
 main{
-    max-width: 1140px;
-    margin:0 auto;
+    max-width: 1500;
+    margin:87px;
 }
 
-.about{
-    border-radius: 20px;
-    padding: 130px 150px;
-    text-align: center;
-    margin-top:130px;
+.global{
+    padding: 20px;
+    margin: 10px
+
 }
+.sun{
+    padding: 10px;
+    margin: 0 30px 30px 30px;
+}
+
+
 
 .item-descriptio{
-    font-weight: 600;
+    font-weight: ;
 
 
 }
 
-.about-items{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: ;
-    
 
-}
 .normal{
     color:rgb(132, 132, 139);
+}
+
+
+
+.update{
+    font-size: 60px;
+    font-weight: 1000;
+
+}
+.button{
+    background-color: rgb(3, 107, 67);
+    color: aliceblue;
+    border-radius: 5px;
+    font-size: 28px;
+    margin-top:55px ;
+    margin-left:55px ;
+    text-align: left;
+    border: 5000px;
+}
+.description{
+    font-size: 19px;
+    margin-bottom: 25px;
+    color: rgb(154, 156, 159);
+}
+.vision{
+    padding: ;
+}
+
+.boxs{
+    gap: 30px;
+    display: flex;
+    padding: px;
+    margin-bottom: 80px;
+}
+    
+    
+
+.box-1{
+    background-color: rgb(202, 239, 249);
+    border-radius: 6px;
+}
+.box-2{
+    background-color: rgb(195, 237, 222);
+    border-radius: 6px;
+}
+.box-3{
+    background-color: rgb(251, 237, 204);
+    border-radius: 6px;
 }
