--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -52,15 +52,23 @@ main{
 .sun{
     padding: 10px;
     margin: 0 30px 30px 30px;
+    background-color: rgb(2, 113, 59);
+    border-radius: 5px;
+    color: aliceblue
+}
+.go{
+    text-align: center;
+    margin-top: 50px;
+    margin-left: 60px;
+    margin-right: 60px;
+    margin-top: 24px;
 }
 
 
 
-.item-descriptio{
-    font-weight: ;
 
 
-}
+
 
 
 .normal{
@@ -113,4 +121,48 @@ main{
 .box-3{
     background-color: rgb(251, 237, 204);
     border-radius: 6px;
+}
+.box-4{
+    display: flex;
+    margin-top: 40px;
+    padding: 30px 50px 30px 30px ;
+    background-color: aliceblue;
+    border-radius: 10px;
+    margin-left: px;
+
+}
+.radius{
+    border-radius: 10px;
+}
+.set{
+    border-radius: 24px;
+}
+.right{
+    margin-left: 20px;
+}
+
+.tom{
+    background-color: rgb(2, 113, 59);
+    border-radius: 5px;
+    color: aliceblue;
+    background-size: 50px;
+    padding: 10px;
+
+}
+.dad{
+    padding: 25px;
+    background-color: aqua;
+    border: 50px;
+    align-items: center;
+
+}
+.money{
+    padding:20px;
+    border: 2px;
+    display: inline;
+    font-size: 20px;
+    border: 50px;
+    box-sizing: content-box;
+    justify-content: center;
+
 }
